--- a/app/src/main/res/layout/activity_atvalto.xml
+++ b/app/src/main/res/layout/activity_atvalto.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -12,12 +13,13 @@
         android:id="@+id/scroll"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:fillViewport="false">
+        android:fillViewport="false"
+        android:layout_above="@+id/adView">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -62,8 +64,6 @@
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
                     android:orientation="horizontal"
-                    android:layout_column="0"
-                    android:layout_span="2"
                     android:layout_weight="2"
                     android:gravity="center">
 
@@ -72,21 +72,24 @@
                         android:layout_height="wrap_content"
                         android:text="@string/atvalto_tav"
                         android:id="@+id/radio_tav"
-                        android:checked="false"/>
+                        android:checked="false"
+                        android:visibility="invisible" />
 
                     <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/atvalto_ter"
                         android:id="@+id/radio_ter"
-                        android:checked="false"/>
+                        android:checked="false"
+                        android:visibility="invisible" />
 
                     <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/atvalto_szog"
                         android:id="@+id/radio_szog"
-                        android:checked="false"/>
+                        android:checked="false"
+                        android:visibility="invisible" />
                 </RadioGroup>
             </LinearLayout>
 
@@ -95,13 +98,13 @@
                 android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/sor3" >
+                android:id="@+id/sor3"
+                android:visibility="invisible">
 
                 <EditText
                     android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/from_in"
-                    android:layout_column="0"
                     android:text="1"
                     android:inputType="number|numberSigned|numberDecimal" />
 
@@ -117,20 +120,20 @@
                 android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/sor4" >
+                android:id="@+id/sor4"
+                android:visibility="invisible">
 
                 <EditText
                     android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/to_in"
-                    android:layout_column="0"
                     android:focusable="true"
                     android:inputType="number|numberSigned|numberDecimal" />
 
                 <Spinner
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/from"
+                    android:id="@+id/to"
                     android:layout_weight="1" />
             </LinearLayout>
 
@@ -138,28 +141,28 @@
                 android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/sor5" >
+                android:id="@+id/sor5"
+                android:visibility="invisible">
 
                 <EditText
                     android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/mereta_in"
-                    android:layout_column="0"
                     android:inputType="number|numberDecimal" />
 
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/atvalto_meretarany"
-                    android:id="@+id/mereta"
-                    android:layout_column="1" />
+                    android:id="@+id/mereta" />
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:id="@+id/sor6" >
+                android:id="@+id/sor6"
+                android:visibility="invisible">
 
                 <Button
                     android:layout_width="wrap_content"
@@ -169,8 +172,16 @@
                     android:layout_weight="2" />
             </LinearLayout>
         </LinearLayout>
-
-
     </ScrollView>
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id">
+    </com.google.android.gms.ads.AdView>
 
 </RelativeLayout>
