--- a/app/src/main/res/layout/activity_iranyszog.xml
+++ b/app/src/main/res/layout/activity_iranyszog.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -10,163 +11,169 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/scrollView"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentLeft="true">
+        android:layout_alignParentLeft="true"
+        android:layout_above="@+id/adView">
 
-        <TableLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:stretchColumns="*">
+            android:layout_height="wrap_content">
 
-            <TableRow
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:layout_marginTop="10dp">
+                android:layout_marginBottom="5dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:text="@string/iranyszog_kezdopont.y"
-                    android:id="@+id/KY"
-                    android:layout_column="0" />
+                    android:id="@+id/KY" />
 
                 <EditText
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:ems="10"
-                    android:id="@+id/KY_in"
-                    android:layout_column="2" />
-            </TableRow>
+                    android:id="@+id/KY_in" />
 
-            <TableRow
+                </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:layout_marginTop="10dp">
+                android:layout_marginBottom="5dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:text="@string/iranyszog_kezdopont.x"
-                    android:id="@+id/KX"
-                    android:layout_column="0" />
+                    android:id="@+id/KX"/>
 
                 <EditText
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:ems="10"
-                    android:id="@+id/KX_in"
-                    android:layout_column="2" />
-            </TableRow>
+                    android:id="@+id/KX_in"/>
 
-            <TableRow
+                </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:layout_marginTop="10dp">
+                android:layout_marginBottom="5dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:text="@string/iranyszog_vegpont.x"
-                    android:id="@+id/VY"
-                    android:layout_column="0" />
+                    android:id="@+id/VY"/>
 
                 <EditText
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:ems="10"
-                    android:id="@+id/VY_in"
-                    android:layout_column="2" />
-            </TableRow>
+                    android:id="@+id/VY_in" />
 
-            <TableRow
+                </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:layout_marginTop="10dp">
+                android:layout_marginBottom="5dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:text="@string/iranyszog_vegpont.x"
-                    android:id="@+id/VX"
-                    android:layout_column="0" />
+                    android:id="@+id/VX"/>
 
                 <EditText
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:ems="10"
-                    android:id="@+id/VX_in"
-                    android:layout_column="2" />
-            </TableRow>
+                    android:id="@+id/VX_in"/>
 
-            <TableRow
+                </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:layout_marginTop="15dp">
+                android:layout_marginBottom="5dp">
 
                 <Button
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/iranyszog_szamol"
-                    android:id="@+id/button"
-                    android:layout_column="0"
-                    android:layout_span="3" />
-            </TableRow>
+                    android:id="@+id/button"/>
 
-            <TableRow
+                </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:layout_marginTop="15dp">
+                android:layout_marginBottom="5dp">
+
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:text="@string/iranyszog_szog"
-                    android:id="@+id/szog_text"
-                    android:textSize="20sp"
-                    android:layout_column="0"
-                    android:visibility="invisible" />
+                    android:id="@+id/szog_text"/>
 
-                <TextView
-                    android:layout_width="fill_parent"
+                <EditText
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/szogkiir"
-                    android:textSize="20sp"
+                    android:editable="false"
+                    android:background="#ffdfdfdf"
+                    android:minHeight="50dp" />
 
-                    android:visibility="invisible"
-                    android:layout_column="2" />
-            </TableRow>
+                </LinearLayout>
 
-            <TableRow
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_marginTop="10dp">
+                android:layout_height="fill_parent">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:text="@string/iranyszog_tavolsag"
-                    android:id="@+id/tav_text"
-                    android:textSize="20sp"
-                    android:layout_column="0"
-                    android:visibility="invisible" />
+                    android:id="@+id/tav_text"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <EditText
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/tav"
-                    android:visibility="invisible"
-                    android:textSize="20sp"
-                    android:layout_column="2" />
-            </TableRow>
-
-        </TableLayout>
+                    android:editable="false"
+                    android:background="#ffdfdfdf"
+                    android:minHeight="50dp" />
+                </LinearLayout>
+        </LinearLayout>
     </ScrollView>
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_ad_unit_id"
+        android:layout_alignParentBottom="true">
+    </com.google.android.gms.ads.AdView>
+
 
 
 </RelativeLayout>
