--- a/app/src/main/res/layout/activity_metszesek.xml
+++ b/app/src/main/res/layout/activity_metszesek.xml
@@ -1,20 +1,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="hu.valamas.hevesitoolbox.szamolasok.metszesek.metszesek">
 
 
     <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/scrollView7"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/scrollView5"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_above="@+id/adView">
 
@@ -24,63 +22,59 @@
             android:layout_height="fill_parent">
 
             <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_marginBottom="5dp">
 
                 <Button
-                    android:id="@+id/iranyszog"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Irányszög számítás" />
-
+                    android:text="Előmetszés tájékozott irányértékkel"
+                    android:id="@+id/tajekozott_btn" />
             </LinearLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_marginBottom="5dp">
 
                 <Button
-                    android:id="@+id/polaris"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Poláris pont számítás" />
-
-                </LinearLayout>
+                    android:text="Belsőszöges előmetszés "
+                    android:id="@+id/belsoszoges_btn" />
+            </LinearLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_marginBottom="5dp">
 
                 <Button
-                    android:id="@+id/numerikus"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Numerikus területszámítás" />
-
-                </LinearLayout>
+                    android:text="Oldal metszés"
+                    android:id="@+id/oldal_btn" />
+            </LinearLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_marginBottom="5dp">
 
                 <Button
-                    android:id="@+id/haromszog"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Háromszög" />
-
-                </LinearLayout>
+                    android:text="Ív metszés"
+                    android:id="@+id/iv_btn" />
+            </LinearLayout>
 
             <LinearLayout
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_marginBottom="5dp">
@@ -88,40 +82,9 @@
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Átváltó"
-                    android:id="@+id/atvalto" />
-
-                </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_marginBottom="5dp">
-
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Szelvény keresö"
-                    android:id="@+id/szelveny" />
-
-                </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_marginBottom="5dp">
-
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Metszések"
-                    android:id="@+id/metszesek" />
-
-                </LinearLayout>
-
-
+                    android:text="Hátra metszés"
+                    android:id="@+id/hatra_btn" />
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
     <com.google.android.gms.ads.AdView
